// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`MultiSelect > matches default variant 1`] = `
<DocumentFragment>
  <div
<<<<<<< HEAD
    class="sc-eeDSqt grPsa aje-multiselect aje-multiselect--default is-medium"
=======
    class="sc-bXCLgj kvJbA-D aje-multiselect aje-multiselect--default is-medium"
>>>>>>> main
  >
    <label
      class="sc-dhKdPU dbWGxZ aje-label is-auto"
      for="react-aria-:r2:"
      id="react-aria-:r3:"
    >
      label
    </label>
    <button
      aria-expanded="false"
      aria-haspopup="listbox"
      aria-labelledby="react-aria-:r7: react-aria-:r3:"
<<<<<<< HEAD
      class="sc-kAycRU sc-imWZod hQvPLv aje-btn sc-jXbVAB eOMUuR aje-btn--dropdown is-medium"
=======
      class="sc-iGgVNO sc-gsFSjX jYbTSg gEspTW aje-btn sc-kAycRU cfoxwV aje-btn--dropdown is-medium"
>>>>>>> main
      id="react-aria-:r2:"
      type="button"
    >
      <span
        class="sc-ikkyvV aQztJ"
        id="react-aria-:r7:"
      >
        Select an option
      </span>
      <i
        aria-hidden="true"
<<<<<<< HEAD
        class="sc-dLNtp ckbTgt material-icons is-medium"
=======
        class="sc-jEABJj lbATfb aje-icon material-icons is-medium"
>>>>>>> main
      >
        arrow_drop_down
      </i>
    </button>
  </div>
</DocumentFragment>
`;

exports[`MultiSelect > matches floating variant 1`] = `
<DocumentFragment>
  <div
<<<<<<< HEAD
    class="sc-eeDSqt grPsa aje-multiselect aje-multiselect--floating is-medium"
=======
    class="sc-bXCLgj kvJbA-D aje-multiselect aje-multiselect--floating is-medium"
>>>>>>> main
  >
    <div
      class="sc-eldOKa cVAPoZ"
    >
      <button
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-labelledby="react-aria-:rf: react-aria-:rb:"
<<<<<<< HEAD
        class="sc-kAycRU sc-imWZod hQvPLv aje-btn sc-jXbVAB eOMUuR aje-btn--dropdown is-medium"
=======
        class="sc-iGgVNO sc-gsFSjX jYbTSg gEspTW aje-btn sc-kAycRU cfoxwV aje-btn--dropdown is-medium"
>>>>>>> main
        id="react-aria-:ra:"
        type="button"
      >
        <span
          class="sc-ikkyvV aQztJ"
          id="react-aria-:rf:"
        />
        <i
          aria-hidden="true"
<<<<<<< HEAD
          class="sc-dLNtp ckbTgt material-icons is-medium"
=======
          class="sc-jEABJj lbATfb aje-icon material-icons is-medium"
>>>>>>> main
        >
          arrow_drop_down
        </i>
      </button>
      <label
        class="sc-dhKdPU dbWGxZ aje-label is-auto"
        for="react-aria-:ra:"
        id="react-aria-:rb:"
      >
        label
      </label>
    </div>
  </div>
</DocumentFragment>
`;
